--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron-builder": "^22.13.1"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "bootstrap": "^3.4.1",
     "electron-updater": "^4.3.9",
     "mysql": "^2.18.1"
